# modellsteuerung-sketch

./: .gitignore  CMakeLists.txt  platformio.ini
configurator/: Cargo.toml
configurator/src/: main.rs
configurator/src/serial/: mod.rs
configurator/src/support/: mod.rs
firmware/: library.json
src/: main.cpp
